--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1705,7 +1705,9 @@
           color: $color-gray-20;
           &.active,
           &:hover {
-            color: $color-primary;
+            &.dir {
+              color: $color-primary;
+            }
             svg {
               fill: $color-primary;
             }
@@ -2160,6 +2162,9 @@
       .columns-info {
         flex-grow: 1;
         font-size: 12px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .expand-icon,
       .add-column {
