--- a/frontend/resources/styles/main/partials/color-bullet.scss
+++ b/frontend/resources/styles/main/partials/color-bullet.scss
@@ -190,7 +190,7 @@ ul.palette-menu .color-bullet {
 }
 
 .color-bullet.is-not-library-color {
-  border-radius: $br-small;
+  border-radius: $br3;
   overflow: hidden;
 
   & .color-bullet-wrapper {
