--- a/frontend/resources/styles/main/partials/dashboard-fonts.scss
+++ b/frontend/resources/styles/main/partials/dashboard-fonts.scss
@@ -47,7 +47,7 @@
       input {
         font-size: $fs12;
         border: 1px solid $color-gray-30;
-        border-radius: $br-small;
+        border-radius: $br3;
         width: 130px;
         padding: $size-1;
         margin: 0px;
@@ -73,7 +73,7 @@
 
     input {
       border: 1px solid $color-gray-30;
-      border-radius: $br-small;
+      border-radius: $br3;
       margin: 0px;
       padding: $size-2;
       font-size: $fs12;
