--- a/frontend/resources/styles/main/partials/project-bar.scss
+++ b/frontend/resources/styles/main/partials/project-bar.scss
@@ -29,7 +29,7 @@
     .project-name {
       border-bottom: 1px solid $color-gray-10;
       font-size: $fs14;
-      font-weight: bold;
+      font-weight: $fw700;
       padding: 0 $size-2;
       width: 100%;
     }
