--- a/frontend/resources/styles/main/partials/sidebar-icons.scss
+++ b/frontend/resources/styles/main/partials/sidebar-icons.scss
@@ -19,7 +19,7 @@
 .figure-btn {
   align-items: center;
   background-color: $color-gray-60;
-  border-radius: 3px;
+  border-radius: $br3;
   border: 1px solid transparent;
   cursor: pointer;
   display: flex;
