--- a/frontend/resources/styles/main/partials/sidebar-interactions.scss
+++ b/frontend/resources/styles/main/partials/sidebar-interactions.scss
@@ -182,7 +182,7 @@
   & .content {
     align-items: center;
     background-color: $color-gray-50;
-    border-radius: 4px;
+    border-radius: $br4;
     display: flex;
     height: 24px;
 
