--- a/frontend/resources/styles/main/partials/sidebar-tools.scss
+++ b/frontend/resources/styles/main/partials/sidebar-tools.scss
@@ -12,7 +12,7 @@
 .tool-btn {
   align-items: center;
   background-color: $color-gray-60;
-  border-radius: 3px;
+  border-radius: $br4;
   cursor: pointer;
   display: flex;
   flex-shrink: 0;
