--- a/frontend/resources/styles/main/partials/sidebar.scss
+++ b/frontend/resources/styles/main/partials/sidebar.scss
@@ -58,7 +58,7 @@
 
         span.tool-badge {
           border: 1px solid $color-primary;
-          border-radius: 2px;
+          border-radius: $br2;
           font-size: $fs10;
           color: $color-primary;
           padding: 2px 4px;
@@ -123,8 +123,8 @@
         & .view-only-mode {
           color: $color-primary;
           border: 1px solid $color-primary;
-          border-radius: 3px;
-          font-size: 10px;
+          border-radius: $br3;
+          font-size: $fs10;
           text-transform: uppercase;
           display: flex;
           align-items: center;
@@ -171,8 +171,8 @@
         & .focus-mode {
           color: $color-primary;
           border: 1px solid $color-primary;
-          border-radius: 3px;
-          font-size: 10px;
+          border-radius: $br3;
+          font-size: $fs10;
           text-transform: uppercase;
           padding: 0px 4px;
           display: flex;
@@ -189,7 +189,7 @@
 
   .empty {
     color: $color-gray-20;
-    font-size: 12px;
+    font-size: $fs12;
     line-height: 1.5;
     text-align: center;
     padding: 0 15px;
@@ -256,7 +256,7 @@
     }
 
     .tab-container-tab-title {
-      border-radius: 4px;
+      border-radius: $br4;
 
       &.current {
         background-color: $color-primary;
@@ -339,7 +339,7 @@ button.collapse-sidebar {
     width: 28px;
     height: 48px;
     padding: 0;
-    border-radius: 0px 4px 4px 0px;
+    border-radius: 0 $br4 $br4 0;
     border-left: 1px solid $color-gray-50;
 
     & svg {
@@ -415,7 +415,7 @@ button.collapse-sidebar {
       justify-content: space-between;
       align-items: center;
       border: 1px solid $color-gray-30;
-      border-radius: 2px;
+      border-radius: $br2;
       width: 100%;
       &:focus-within {
         border: 1px solid $color-primary;
@@ -516,7 +516,7 @@ button.collapse-sidebar {
 
     .shortcut-name {
       border: 1px solid $color-gray-60;
-      border-radius: 4px;
+      border-radius: $br4;
       padding: 7px;
       display: flex;
       justify-content: space-between;
@@ -537,10 +537,10 @@ button.collapse-sidebar {
         min-width: 15px;
         background-color: $color-white;
         color: $color-black;
-        border-radius: 3px;
+        border-radius: $br3;
         padding: 2px 5px;
         font-size: $fs11;
-        font-weight: 600;
+        font-weight: $fw600;
         margin: 0 2px;
         text-transform: capitalize;
         display: inline-block;
