--- a/frontend/resources/styles/main/partials/workspace.scss
+++ b/frontend/resources/styles/main/partials/workspace.scss
@@ -77,7 +77,7 @@ $height-palette-max: 80px;
 
 .workspace-context-menu {
   background-color: $color-white;
-  border-radius: $br-small;
+  border-radius: $br3;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
   left: 740px;
   position: absolute;
@@ -198,7 +198,7 @@ $height-palette-max: 80px;
 
   .coordinates {
     background-color: $color-dark-bg;
-    border-radius: $br-small;
+    border-radius: $br3;
     bottom: 0px;
     padding-left: 5px;
     position: fixed;
@@ -223,7 +223,7 @@ $height-palette-max: 80px;
 
   .cursor-tooltip {
     background-color: $color-dark-bg;
-    border-radius: $br-small;
+    border-radius: $br3;
     color: $color-white;
     font-size: $fs12;
     padding: 3px 8px;
@@ -348,11 +348,11 @@ $height-palette-max: 80px;
   width: fit-content;
   font-family: worksans;
   padding: 2px 12px;
-  border-radius: 4px;
+  border-radius: $br4;
   display: flex;
   align-items: center;
   height: 20px;
-  font-size: 12px;
+  font-size: $fs12;
   line-height: 1.5;
 }
 
@@ -373,7 +373,7 @@ $height-palette-max: 80px;
     display: flex;
     flex-direction: row;
     background: white;
-    border-radius: 3px;
+    border-radius: $br3;
     padding: 0.5rem;
     border: 1px solid $color-gray-20;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
@@ -393,7 +393,7 @@ $height-palette-max: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 3px;
+    border-radius: $br3;
 
     svg {
       pointer-events: none;
